WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53965
UI process crashes if web process crashes while web inspector is focused
https://bugs.webkit.org/show_bug.cgi?id=53965
Summary
UI process crashes if web process crashes while web inspector is focused
Anders Carlsson
Reported
2011-02-07 16:56:53 PST
UI process crashes if web process crashes while web inspector is focused
Attachments
Patch
(1.30 KB, patch)
2011-02-07 16:58 PST
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(1.55 KB, patch)
2011-02-08 11:33 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-07 16:58:24 PST
Created
attachment 81553
[details]
Patch
Anders Carlsson
Comment 2
2011-02-07 17:00:39 PST
Committed
r77866
: <
http://trac.webkit.org/changeset/77866
>
WebKit Review Bot
Comment 3
2011-02-07 18:10:28 PST
http://trac.webkit.org/changeset/77866
might have broken Leopard Intel Release (Tests)
Anders Carlsson
Comment 4
2011-02-08 11:33:17 PST
Created
attachment 81669
[details]
Patch
Anders Carlsson
Comment 5
2011-02-08 11:36:07 PST
Committed
r77962
: <
http://trac.webkit.org/changeset/77962
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug