third_party/WebKit/Source/WebKit2/UIProcess/WebInspectorProxy.cpp
@@ -186,6 +186,8 @@ void WebInspectorProxy::didLoadInspectorPage()
 
 void WebInspectorProxy::didClose()
 {
+    m_page->close();
+
     platformClose();
 
     m_isVisible = false;
